--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "tables": "npx kanel"
   },
   "devDependencies": {
+    "@types/pg": "^8.6.5",
+    "kanel": "^3.1.2",
     "nuxt": "3.0.0-rc.13"
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
+    "dotenv": "^16.0.3",
+    "pg": "^8.8.0",
     "zod": "^3.19.1"
   }
 }
