--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "@types/pg": "^8.6.5",
     "kanel": "^3.1.2",
-    "nuxt": "3.0.0-rc.13"
+    "nuxt": "3.0.0-rc.13",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1"
   },
   "dependencies": {
     "bootstrap": "^5.2.2",
