--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
     "tables": "npx kanel"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/pg": "^8.6.5",
+    "@types/uuid": "^8.3.4",
     "kanel": "^3.1.2",
     "nuxt": "3.0.0-rc.13",
     "sass": "^1.56.1",
     "sass-loader": "^10.4.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
     "pg": "^8.8.0",
+    "uuid": "^9.0.0",
     "zod": "^3.19.1"
   }
 }
