--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/pg": "^8.6.5",
     "@types/uuid": "^8.3.4",
     "kanel": "^3.1.2",
-    "nuxt": "3.0.0-rc.13",
+    "nuxt": "^3.0.0",
     "sass": "^1.56.1",
     "sass-loader": "^10.4.1"
   },
