--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["kanel", "Nuxt", "nuxtjs", "Setlist"]
+  "cSpell.words": ["kanel", "Nuxt", "nuxtjs", "Setlist", "setlists"]
 }
