--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
     "pg": "^8.8.0",
+    "supertokens-web-js": "^0.3.0",
     "uuid": "^9.0.0",
     "zod": "^3.19.1"
   }
