--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["kanel", "Nuxt", "nuxtjs", "Setlist", "setlists"]
+  "cSpell.words": [
+    "kanel",
+    "Nuxt",
+    "nuxtjs",
+    "Setlist",
+    "setlists",
+    "vuedraggable"
+  ]
 }
