moved around api files

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "sass-loader": "^10.4.1"
   },
   "dependencies": {
+    "@trevoreyre/autocomplete-vue": "^2.3.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "bootstrap-icons": "^1.10.2",
